Added hard dependancy on experimental factorio.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.14
+Date: 2025-06-03
+  Changes:
+    - Added hard dependancy on experimental factorio.
+---------------------------------------------------------------------------------------------------
 Version: 3.0.13
 Date: 2025-6-1
   Changes:
