--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.17
+Date: ?????
+  Changes:
+    - Added Dutch locale
+---------------------------------------------------------------------------------------------------
 Version: 3.0.16
 Date: 2025-08-12
   Changes:
