Migrate the internal name of the "quantum" technology to "space-science-pack".

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.17
+Date: ???
+  Changes:
+    - Migrated the internal name of the "quantum" technology to "space-science-pack".
+---------------------------------------------------------------------------------------------------
 Version: 3.0.16
 Date: 2025-08-12
   Changes:
