--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,22 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.17
+Date: ???
+  Changes:
+    - Remade tech tree with autotech 2.0. Science pack cost comparasion:
+    - automation: n/a -> trigger
+    - py1: 100 -> 100
+    - logi: 360 -> 300
+    - py2: 1300 -> 800
+    - chem: 2000 -> 1400
+    - py3: 2250 -> 1750
+    - prod: 1750 -> 2250
+    - py4: 2250 -> 3000
+    - utility: 1500 -> 3300
+    - space: 1000 -> 3600
+    - phyrric: 3000 -> 8000
+    - Migrated the internal name of the "quantum" technology to "space-science-pack".
+    - Added Dutch locale
+---------------------------------------------------------------------------------------------------
 Version: 3.0.16
 Date: 2025-08-12
   Changes:
