--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.18
+Date: ????
+  Changes:
+    - Fixed some techs having a too-fast cycle time
+---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
   Changes:
