--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Date: ????
     - Fixed some techs having a too-fast cycle time
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
     - Code cleanup: Moved RECIPE entries from the "fluid" prototype folder into "recipes"
+    - Code cleanup: Moved FLUID entry prototypes into a single file for easier code-base navigation
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
