--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: ????
     - Code cleanup: Moved RECIPE entries from the "fluid" prototype folder into "recipes"
     - Code cleanup: Moved FLUID entry prototypes into a single file for easier code-base navigation
     - Code cleanup: Moved ITEM entries from the "buildings" prototype folder into "items"
+    - Code cleanup: Moved RECIPE entries from the "buildings" prototype folder into "recipes"
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
