Load RECIPE prototypes after all other prototypes
Currently it is impossible to predict when which
ITEM or FLUID is loaded, which makes it quite
difficult to refer to these prototypes when
using py.composite_icon for example.

This does not solve all problems, as a lot of RECIPE
prototypes are currently not in the recipes prototype folder,
but it will ease that pain a little bit.

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Fixed some techs having a too-fast cycle time
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
+    - Load RECIPE prototypes after all other prototypes
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
