--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@ Date: ????
     - Fixed some techs having a too-fast cycle time
     - Updated Simplified Chinese locale courtesy of @alone on Discord
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
+    - Added es-ES locale
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
