--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 3.0.18
 Date: ????
   Changes:
+    - MK03 trains now tilt on rail ramps
     - Fixed some techs having a too-fast cycle time
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
     - Added es-ES locale
