--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Date: ????
     - Increased the output fluidbox size of all buildings from 100->1000. Allows fluid transfer at even higher rates before hitting engine limitations. Resolves https://github.com/pyanodon/pybugreports/issues/1203
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
     - Added es-ES locale
+    - Renamed "make diamond" to "breed diamond" to match other particle accelerator recipes
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
