--- a/changelog.txt
+++ b/changelog.txt
@@ -1,14 +1,19 @@
 ---------------------------------------------------------------------------------------------------
-Version: 3.0.18
-Date: ????
+Version: 3.0.19
+Date: ???
   Changes:
     - Updated German locale courtesy of @Spunk42
+---------------------------------------------------------------------------------------------------
+Version: 3.0.18
+Date: 2025-12-28
+  Changes:
     - MK03 trains now tilt on rail ramps
     - Fixed some techs having a too-fast cycle time
     - Increased the output fluidbox size of all buildings from 100->1000. Allows fluid transfer at even higher rates before hitting engine limitations. Resolves https://github.com/pyanodon/pybugreports/issues/1203
     - Fixed all techs added by "enable all feature flags" not being seen by autotech.
     - Added es-ES locale
     - Renamed "make diamond" to "breed diamond" to match other particle accelerator recipes
+    - Renamed "distilation of cumene" to "cumene distillation"
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.17
 Date: 2025-09-15
