--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 3.0.19
+Date: ???
+  Changes:
+    - Updated German locale courtesy of @Spunk42
+---------------------------------------------------------------------------------------------------
 Version: 3.0.18
 Date: 2025-12-28
   Changes:
