--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 3.0.19
 Date: ???
   Changes:
+    - Updated russian locale courtesy of @Astorin
     - Updated German locale courtesy of @Spunk42
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.18
